--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -6,3 +6,10 @@
   color: $btnColor;
   background-color: $black;
 }
+
+@mixin container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 40px;
+}
