--- a/src/assets/style/_media.scss
+++ b/src/assets/style/_media.scss
@@ -19,6 +19,17 @@
   .box-container {
     flex-wrap: wrap;
   }
+
+  // Main Box
+    .cards-container {
+
+
+     .main-cards {
+      flex-wrap: wrap;
+      justify-content: center;
+      gap:41px !important;
+     }
+    }
 }
 
 // 1100 px
@@ -44,6 +55,13 @@
     width: 550px;
     height: 550px;
   }
+  //  Main cards
+  .cards-container {
+
+    .main-card {
+     display: flex;
+    }
+   }
 }
 
 // 992 px
@@ -69,6 +87,15 @@
     }
   }
 
+}
+
+@media only screen and (max-width:825px) {
+  .cards-container {
+    .main-card {
+      flex-direction: column;
+     }
+
+  }
 }
 
 // 768 px
@@ -103,6 +130,19 @@
       font-size: 36px !important;
     }
   }
+
+  // main card
+  .main-card {
+    align-items: center;
+    .cards-content__title {
+      font-size: 36px !important;
+    }
+    .main-card__img {
+      width: 290px;
+      height: 200px;
+    }
+  }
+  
 }
 // 401 px
 @media only screen and (max-width:401px) {
@@ -145,9 +185,28 @@
     font-size: 12px !important;
     max-width: 210px !important;
   }
- 
+
+  // Main card
+  .cards-container {
+
+    .main-card {
+      padding: 15px 0 30px 15px !important;
+    }
+    .cards-content__title {
+      font-size: 31px !important;
+    }
+    .cards-content__text {
+      max-width: 300px !important;
+    }
+
+    .main-card-content {
+      padding: 20px 0 !important;
+    }
+  }
 }
 
-@media only screen and (max-width:340px) {
-  
+@media only screen and (max-width:355px) {
+  .cards-container  {
+
+  }
 }
