--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -3,6 +3,7 @@
 @import "_font.scss";
 @import "_variables.scss";
 @import "_media.scss";
+@import "_tailwind.scss";
 
 * {
   margin: 0;
@@ -45,14 +46,23 @@ body {
     background-color: $black;
     color: $btnColor;
   }
+  .header-nav__item {
+    @include transition-ease
+  }
+  .header-nav__item:hover{
+    transform: translateY(-5px);
+  }
+  
   .header-nav__link {
     font-size: 14px;
     line-height: 16px;
     color: $TitleColor;
-    @include transition-ease
+    padding-bottom: 3px;
+    transition: all .10s ease-in-out;
   }
   .header-nav__link:hover {
     color: $btnColor;
+    border-bottom: 2px solid $btnColor;
 }
   
 }
@@ -372,5 +382,41 @@ body {
     @include btn-hover;
   }
   
+}
+
+// Main seo
+
+.container-seo {
+  @include container;
+  padding-bottom: 100px;
+
+  .seo-content__title {
+    font-weight: bold;
+    color: $TitleColor;
+    margin-top: 61px;
+  }
+
+  .seo-content__text {
+    color: $TextColor;
+  }
+
+  .seo-content__card {
+    @include transition-ease;
+    align-items:unset;
+    cursor: pointer;
+  }
+  .seo-content__card:hover {
+    background: $White;
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.1);
+    transform: translateY(-10px);
+  }
+
+  .content-card__img {
+    background-color: #FCD5C8;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 17px;
+  }
 }
 
