--- a/src/assets/style/_media.scss
+++ b/src/assets/style/_media.scss
@@ -41,6 +41,17 @@
       width: 100% !important;
       height: 100% !important;
     }
+
+
+    // Mian form 
+
+    .container-form {
+
+      .Form-img {
+        height: 450px;
+        width: 500px;
+      }
+    }
 }
 
 // 1100 px
@@ -73,6 +84,28 @@
      display: flex;
     }
    }
+
+  //  Main num 
+   .container-number {
+
+    .main-number {
+      flex-wrap: wrap;
+      text-align: center;
+    }
+   }
+
+  //  Main form 
+
+  .container-form {
+    flex-wrap: wrap-reverse;
+    gap: 30px;
+
+    .Form-img {
+      height: 100%;
+      width: 100%;
+    }
+
+  }
 }
 
 // 992 px
@@ -117,7 +150,27 @@
     gap: 31px;
   }
 
-  
+  // Form container
+   .container-form  {
+    .mainForm-content__title {
+      font-size: 40px;
+    }
+
+    .MainForm-form {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      justify-content: center;
+    }
+    .mainForm-email,.mainForm-url,.mainFrom-btn {
+      margin: 0;
+      width: 81%;
+    }
+
+    .mainForm-content__title  {
+      max-width: 459px;
+    }
+  }
 }
 
 // 576px
@@ -134,6 +187,23 @@
     .seo-content__text {
      width: 100%;
     }
+}
+
+// Main form
+
+.container-form{
+  .Form-img {
+    width: 100%;
+    height: 100%;
+  }
+  
+}
+
+// Main number
+.container-number {
+  .number-content__num {
+    font-size: 61px;
+  }
 }
 }
 // 501 px
@@ -190,6 +260,20 @@
     
     .card-content__textt {
       max-width: 240px;
+    }
+  }
+
+
+  // Main from 
+  .container-form {
+
+    .mainForm-content__title  {
+      font-size: 33px;
+      max-width: 211px;
+    }
+    .mainForm-content__text {
+      max-width: 301px;
+      font-size: 12px;
     }
   }
   
@@ -267,6 +351,18 @@
 
     .seo-content__title {
       font-size: 23px !important;
+    }
+  }
+
+  // main Form
+  .container-form {
+    .mainForm-content__title  {
+      font-size: 22px;
+      max-width: 211px;
+    }
+    .mainForm-content__text {
+      max-width: 234px;
+      font-size: 12px;
     }
   }
 }
