--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -178,6 +178,7 @@ body {
     @include transition-ease
   }
   .header-content__btn:hover {
+    transform: translateY(-5px);
     @include btn-hover
   }
 }
@@ -238,6 +239,7 @@ body {
     @include transition-ease
   }
   .solution-content__btn:hover {
+    transform: translateY(-5px);
     @include btn-hover;
   }
 
@@ -418,5 +420,55 @@ body {
     border-radius: 50%;
     margin-top: 17px;
   }
+}
+
+// Main color
+
+.container-number {
+  @include container;
+  padding: 100px 0 42px 0;
+  
+
+  .main-number {
+    border: 2px solid #EEEEEE;
+    padding: 27px 66px 37px 76px;
+  }
+  .number-content__num {
+    color: $TextColor;
+    font-weight: bold;  
+  }
+
+  .number-content__text {
+    color: $TextColor;
+    font-weight: 600;
+  }
+}
+
+/* main Form */
+
+.container-form {
+  @include container;
+
+  .mainFrom-btn {
+    background-color: $btnColor;
+    padding: 15px 49px;
+    box-shadow: 4px 4px 8px rgba(242, 88, 34, 0.25);
+    border-radius: 50px;
+    @include transition-ease
+  }
+  .mainFrom-btn:hover {
+    @include btn-hover;
+    transform: translateY(-5px);
+  }
+
+  .mainForm-url, .mainForm-email{
+    background: #EEEEEE;
+    border-radius: 50px;
+    outline: none;
+    border: none;
+    border-right:1px solid #000;
+  }
+
+
 }
 
