--- a/src/assets/style/_media.scss
+++ b/src/assets/style/_media.scss
@@ -287,6 +287,28 @@
       font-size: 12px;
     }
   }
+
+  // Main team
+  .container-team {
+
+    .team-content__title {
+      font-size: 36px;
+    }
+    .team-content__text {
+      max-width: 360px;
+    }
+  }
+
+  // Main comment
+    .main-comment__content {
+      .comment-content__text  {
+        max-width: 360px !important;
+      }
+
+      .comment-content__title  {
+        font-size: 36px !important;
+      }
+    }
   
 }
 // 401 px
@@ -388,6 +410,15 @@
     .mainForm-content__text {
       max-width: 234px;
       font-size: 12px;
+    }
+  }
+
+  // Main team
+
+  .container-team {
+
+    .team-content__text {
+      max-width: 290px;
     }
   }
 }
