--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -526,3 +526,71 @@ body {
   }
 }
 
+// Main team
+
+.container-team {
+  @include container;
+  flex-direction:column;
+  padding: 86px 0 0 0;
+
+  .main-team__card {
+    padding: 50px 70px;
+    border: 1px solid #EEEEEE;
+    @include transition-ease
+  }
+  .main-team__card:hover{
+    box-shadow: 15px 20px 50px rgba(0, 0, 0, 0.1);
+    transform: translateY(-10px);
+  }
+  .team-card__title {
+    @include transition-ease
+  }
+  .main-team__card:hover .team-card__title {
+    color: $btnColor;
+  }
+  
+  .team-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 50px;
+    @include transition-ease;
+  }
+  .team-icons path {
+    fill: #AAAAAA;
+  }
+  .team-icons:hover {
+    @include transition-ease;
+    background-color: $btnColor;
+  }
+  .team-icons:hover path{
+    @include transition-ease;
+    fill: $White;
+  }
+
+}
+
+// Main Comment
+
+.container-comment {
+  @include container;
+  flex-direction: column;
+}
+
+.main-comment__card {
+  padding: 25px 30px;
+  background: #FFFFFF;
+  box-shadow: 15px 25px 60px -10px rgba(0, 0, 0, 0.1)
+}
+
+// Main News
+.container-news {
+  @include container;
+  flex-direction: column;
+}
+
+.splide__pagination__page.is-active {
+  background-color: $btnColor;
+}
+
