--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -650,6 +650,7 @@ body {
     border-bottom: 1px solid #CCCCCC;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: unset;
     gap: 101px;
     padding-bottom: 50px;
